<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_2"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="0sp"
        android:textAlignment="viewEnd"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_1"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textSize="64sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPanel"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:padding="10sp"
        android:background="#444"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bottom_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_4"
            android:gravity="center">

            <Button
                android:id="@+id/btnreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="210dp"
                tools:layout_editor_absoluteY="368dp" />

            <Button
                android:id="@+id/btnbackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backspace"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="367dp" />

            <Button
                android:id="@+id/btnpercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="368dp" />

            <Button
                android:id="@+id/btndivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="309dp"
                tools:layout_editor_absoluteY="435dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_3"
            android:gravity="center">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="500dp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="500dp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="308dp"
                tools:layout_editor_absoluteY="500dp" />

            <Button
                android:id="@+id/btnmul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="307dp"
                tools:layout_editor_absoluteY="562dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_2"
            android:gravity="center">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="214dp"
                tools:layout_editor_absoluteY="564dp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="562dp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="562dp" />

            <Button
                android:id="@+id/btnsub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="625dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_1"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="434dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="434dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="434dp" />

            <Button
                android:id="@+id/btnadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="500dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="624dp" />

            <Button
                android:id="@+id/btnequal"
                android:layout_width="177dp"
                android:layout_height="52dp"
                android:text="@string/equal"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="621dp" />

            <Button
                android:id="@+id/btndot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="308dp"
                tools:layout_editor_absoluteY="367dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>